--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./src/main.css" rel="stylesheet" />
-    <title>Vite App</title>
+    <link rel="icon" href="/favicon.ico" sizes="any" />
+    <meta name="description" content="App for Tracking Moods" />
+    <title>Mood Tracker</title>
   </head>
   <body>
     <div id="app"></div>
